# Clearway

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRACTS.md  DESIGN_NOTE.md  LICENSE  NOTICE  README.md  docker-compose.yml  env.example  pyproject.toml
benchmark/: acceptance_report.json
clearway/: __init__.py  cli.py
docs/: M1-weak-spots.md  M2-failure-analysis.md  M4-calibration-report.md  acceptance-analysis.md  act-feasibility.md  drafter-kappa-baseline.md  fable5-review-codebase.md  fable5-review-methodology.md  finding-class-trust.md  mcp-retrieval-interface.md
scripts/: capture_real_page_snapshot.py  mcp_retrieval_client.py
specs/: M0-walking-skeleton.md  M1-forward-path.md  M2-control-loop.md  M3-mcp-retrieval.md  M4-judge-calibration.md  M5-benchmark.md  M6-drafter-kappa.md  M7-referent-injection.md
tests/: stubs.py  test_acceptance_snapshot.py  test_act_gold.py  test_benchmark.py  test_benchmark_checkpoint.py  test_benchmark_freeze.py  test_benchmark_inject.py  test_benchmark_tier_b.py  test_calibration.py  test_calibration_emit.py  test_calibration_replay.py  test_calibration_snapshot.py  test_cli.py  test_confidence.py  test_confidence_replay.py  test_corpus.py  test_dashboard_benchmark.py  test_dashboard_calibration.py  test_drafter.py  test_drafter_kappa.py  test_drafter_kappa_baseline.py  test_drafter_score.py  test_drafter_violations_bucket.py  test_dry_gate.py  test_edit_distance.py  test_eval.py  test_fixtures.py  test_judge.py  test_judge_score.py  test_kappa.py  test_llm_cloud.py  test_machine.py  test_mcp_retrieve.py  test_mcp_server.py  (+29 more)
(+136 files in other folders)
