[project]
name = "clearway"
version = "0.1.0"
description = "An accessibility evidence pipeline that measures the trustworthiness of its own AI-generated conformance evidence."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "FuYuan (Skinner) Cheng" }]
dependencies = [
    "litellm>=1.91.0",
    "mcp>=1.28.1,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.43,<2",
    "opentelemetry-sdk>=1.43,<2",
    "pgvector>=0.5.0",
    "playwright>=1.48,<2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.10,<3",
]

[project.scripts]
clearway = "clearway.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "mypy>=1.15",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clearway"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
